# OOP_labs2

./: README.md
lab2/: CMakeLists.txt  main.cpp
lab2/include/: decimal.h
lab2/src/: decimal.cpp
lab2/test/: test.cpp
